test/types/range/diten/rangecastbounds.high.good
rangecastbounds.chpl:18: error: cannot cast range from bounded to boundedHigh
